--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 # Fill in information about your library then remove # from the start of lines
 # https://docs.particle.io/guide/tools-and-features/libraries/#library-properties-fields
 name=ModbusLib
-version=1.0.4
+version=1.0.5
 author=Scott Alexander Gray
 # license=insert your choice of license here
-# sentence=one sentence description of this library
+sentence=High speed, multi-slave Modbus library for use with the Particle-electron
 # paragraph=a longer description of this library, always prepended with sentence when shown
 url=the URL of the project, like https://github.com/scottalexgray/ModbusLib
 repository=git repository for the project, like https://github.com/scottalexgray/ModbusLib.git
